@@ -4,8 +4,16 @@ cryptsetup (2:1.1.3-4) UNRELEASED; urgency=low
   * bump standards-version to 3.9.1, no changes required
   * add patches/01_manpage_units: mention units (512b sectors) for -o option
     in man page. (closes: #584174)
+  * move cryptdisks_st* scripts from /usr/sbin to /sbin, add symlinks for
+    compability reasons. thanks to Mario 'BitKoenig' Holbe. (closes: #589800)
+  * add decrypt_keyctl keyscript from Michael Gebetsroither, which supports
+    to cache a passphrase for later use. (closes: #563961)
+  * invoke /sbin/lvm with full path in cryptroot initramfs script. thanks to
+    Bernd Zeimetz. (closes: #597648)
+  * print out a warning at initramfs cryptroot hook in case that detection of
+    canonical device failed. (closes: #594092)
 
- -- Jonas Meurer <mejo@debian.org>  Sun, 15 Aug 2010 15:48:51 +0200
+ -- Jonas Meurer <mejo@debian.org>  Sat, 25 Sep 2010 19:12:34 +0200
 
 cryptsetup (2:1.1.3-3) unstable; urgency=low
 
